Updated proposal with some more figures and final changes.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -86,7 +86,7 @@
 @misc{oprofile,
   title={{OProfile}},
   author={Levon, J. and Elie, P.},
-  note={\verb#http://oprofile.sourceforge.net#},
+  note={\url{http://oprofile.sourceforge.net}},
 }
 
 @article{rahman2001opd,
@@ -110,4 +110,20 @@
   author={Olsen, J.H. and Skov, S.C.},
   journal={Master's thesis, University of Copenhagen, Copenhagen, Denmark},
   year={2002}
+}
+
+@article{vanemdeboas1976dai,
+  title={{Design and implementation of an efficient priority queue}},
+  author={van Emde Boas, P. and Kaas, R. and Zijlstra, E.},
+  journal={Theory of Computing Systems},
+  volume={10},
+  number={1},
+  pages={99--127},
+  year={1976},
+  publisher={Springer}
+}
+@manual{intel-opt,
+  title={{IA-32 Intel Architecture Optimization Reference Manual}},
+  organization={Intel Corporation},
+  year={2004}
 }
